Fixed featured image alignment in post page

--- a/assets/sass/components/_post.scss
+++ b/assets/sass/components/_post.scss
@@ -39,6 +39,6 @@
   }
 
   &__image {
-    margin-bottom: $font-size-base;
+    margin: 0 auto $base-spacing-unit;
   }
 }
