--- a/assets/sass/settings/_colors.scss
+++ b/assets/sass/settings/_colors.scss
@@ -5,7 +5,7 @@
 // Colors
 $color-brand: #207cdf;
 $color-white: #ffffff;
-$color-text:  #222222;
+$color-text:  #323232;
 $color-gray:  #7e7e7e;
 
 // Background Colors
